Fix header position

--- a/src/RuleEngine/styles.scss
+++ b/src/RuleEngine/styles.scss
@@ -227,7 +227,7 @@
 }
 
 .rule-header {
-    position: fixed;
+    position: absolute;
     height: 80px;
     background: #35373f;
     width: 250px;
