--- a/src/BurgerMenu/styles.scss
+++ b/src/BurgerMenu/styles.scss
@@ -1,5 +1,5 @@
-.BurgerMenu-container {
-    .button-wrapper {
+.burgerMenuContainer {
+    .buttonWrapper {
         width: 40px;
         height: 40px;
         display: flex;
@@ -27,7 +27,7 @@
             display: none;
         }
 
-        .menu-item {
+        .menuItem {
             display: flex;
             border-bottom: 1px solid #4e515b;
             color: white;
