--- a/src/common.module.css
+++ b/src/common.module.css
@@ -1,56 +1,8 @@
-.button {
-    min-width: 100px;
-    height: 40px;
-    margin-right: 10px;
-    border: 1px solid #4e515b;
-    border-radius: 3px;
-    color: #4e515b;
-    background: #1e1e1e;
-    outline: none;
-}
-
-.button.success {
-    color: white;
-    background: #4ecd77;
-}
-
-.button:hover {
-    color: white;
-    border: 1px solid white;
-    cursor: pointer;
-}
-
-.button.success:hover {
-    background: #249448;
-    border-color: #249448;
-}
-
-.button:disabled:hover {
-    cursor: not-allowed;
-}
-
-.button:last-child {
-    margin-right: 0;
-}
-
-
-.newRuleBtn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-width: 120px !important;
-    font-weight: bold;
-    padding: 5px 10px !important;
-
-}
-
-.newRuleBtn .plus {
-    font-weight: bold;
-    margin-right: 5px;
-}
-
 .labelWrapper {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+    color: white;
+    font-size: 14px;
+    font-family: "Roboto", sans-serif;
 }
 
 .labelWrapper.color {
@@ -73,6 +25,7 @@
 }
 
 .ruleEditor {
+    height: 95%;
     min-width: calc(100% - 250px);
     max-width: calc(100% - 255px);
     position: relative;
@@ -81,7 +34,7 @@
 .ruleContainer {
     overflow-y: hidden;
     height: 100%;
-    padding: 20px 50px 10px;
+    background: #2f3036;
 }
 
 .ruleContainer:hover {
@@ -95,31 +48,28 @@
     color: #737888;
 }
 
-.editorTitle {
-    display: flex;
-    font-size: 20px;
-    margin-bottom: 5px;
-    color: white;
-}
-
-.editorTitle .tab {
-    margin-right: 20px;
-    color: #737888;
-    font-size: 16px;
-    padding: 0 20px;
-}
-
-.editorTitle .tab:hover {
-    cursor: pointer;
-}
-
-.selectedTab {
-    color: white !important;
-    border-bottom: 1px solid #4ecd77;
-}
-
 .newItemTitle {
     font-size: 20px;
     color: white;
     padding: 0;
+    margin-bottom: 20px;
+    height: unset !important;
+}
+
+.tabContainer {
+    background: #212122;
+    height: 100%;
+    padding: 30px;
+}
+
+.tabContainer > div {
+    height: 100%;
+}
+
+.tabContainer > div > div:last-child {
+    height: calc(100% - 50px);
+}
+
+.newTabContainer > div > div:last-child {
+    height: unset;
 }
