--- a/src/components/MarkerMainTab/styles.module.css
+++ b/src/components/MarkerMainTab/styles.module.css
@@ -1,5 +1,5 @@
-.fieldName {
-    margin-bottom: 10px;
+.field {
+    margin-bottom: 15px;
 }
 
 .nameWrapper {
@@ -7,13 +7,26 @@
 }
 
 .markerArea {
-    background: #35373e;
-    border: 1px solid #4e515b;
+    background: #2f3036;
+    border: 1px solid #656565;
+    border-radius: 3px;
     padding: 10px 10px;
-    height: calc(100% - 60px);
-    min-height: 150px;
-    max-height: 200px;
+    min-height: 85%;
     overflow: hidden;
+}
+
+.markerArea::-webkit-scrollbar-thumb {
+    background-color: #333;
+}
+
+.markerArea::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #666;
+}
+
+.markerArea::-webkit-scrollbar {
+    width: 6px;
+    background-color: #f5f5f5;
 }
 
 .markerArea:hover {
