--- a/src/components/RuleMainTab/styles.module.css
+++ b/src/components/RuleMainTab/styles.module.css
@@ -17,13 +17,21 @@
 
 .editor :global(.react-codemirror2) {
     min-height: 100%;
+    height: 100%;
 }
 
 .editor :global(.react-codemirror2 .CodeMirror.cm-s-darcula) {
     background: #35373e;
-    border: 1px solid #4e515b;
+    border: 1px solid #656565;
+    border-radius: 0 3px 3px 3px;
     min-height: 100%;
-    max-width: 100%;
+    height: 100%;
+    max-width: unset;
+}
+
+.editor :global(.react-codemirror2 .CodeMirror.cm-s-darcula .CodeMirror-scroll) {
+    height: 100%;
+    min-height: 100%;
 }
 
 .tabs {
@@ -40,6 +48,8 @@
     padding: 5px 0;
     margin-bottom: -1px;
     cursor: pointer;
+    border-top-right-radius: 3px;
+    border-top-left-radius: 3px;
 }
 
 .errorCount {
@@ -57,7 +67,7 @@
 
 .selectedEditorContainerTab {
     background: #35373e;
-    border: 1px solid #4e515b;
+    border: 1px solid #656565;
     border-bottom: none;
     color: white !important;
     z-index: 1;
@@ -100,35 +110,5 @@
 }
 
 .checkboxContainer {
-    display: block;
-    position: relative;
-    padding-left: 35px;
     margin-bottom: 12px;
-    cursor: pointer;
-    color: white;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-.checkboxContainer input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
-}
-
-.checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 20px;
-    width: 20px;
-    border: solid 1px #ccc;
-}
-
-.checkboxContainer input:checked ~ .checkmark {
-    background-color: #4ecd77;
-    border: 5px solid #4e515b;
 }
