--- a/src/components/Sider/styles.module.css
+++ b/src/components/Sider/styles.module.css
@@ -1,6 +1,6 @@
 .ruleList {
     width: 250px;
-    background: #35373e;
+    background: #2f3036;
     position: relative;
     height: 100%;
     overflow: hidden;
@@ -32,7 +32,6 @@
     display: flex;
     flex-direction: column;
     width: 250px;
-    margin-top: 80px;
     height: calc(100% - 80px);
     overflow-y: hidden;
 }
@@ -103,6 +102,6 @@
 }
 
 .selectedItemButton {
-    background: #1e1e1e !important;
+    background: #212122 !important;
 }
 
