--- a/src/components/RuleMainTab/styles.module.css
+++ b/src/components/RuleMainTab/styles.module.css
@@ -26,7 +26,7 @@
     border-radius: 0 3px 3px 3px;
     min-height: 100%;
     height: 100%;
-    max-width: unset;
+    max-width: 100%;
 }
 
 .editor :global(.react-codemirror2 .CodeMirror.cm-s-darcula .CodeMirror-scroll) {
