--- a/src/components/Sider/styles.module.css
+++ b/src/components/Sider/styles.module.css
@@ -32,12 +32,26 @@
     display: flex;
     flex-direction: column;
     width: 250px;
-    height: calc(100% - 80px);
     overflow-y: hidden;
+    height: 100%;
 }
 
 .rules:hover {
     overflow-y: overlay;
+}
+
+.rules::-webkit-scrollbar-thumb {
+    background-color: #333;
+}
+
+.rules::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #666;
+}
+
+.rules::-webkit-scrollbar {
+    width: 6px;
+    background-color: #f5f5f5;
 }
 
 .ruleItemButton {
