--- a/src/components/RuleMainTab/styles.module.css
+++ b/src/components/RuleMainTab/styles.module.css
@@ -45,11 +45,13 @@
     width: 120px;
     text-align: center;
     color: #737888;
-    padding: 5px 0;
     margin-bottom: -1px;
     cursor: pointer;
     border-top-right-radius: 3px;
     border-top-left-radius: 3px;
+    font-size: 14px;
+    line-height: 16px;
+    padding: 10px 20px;
 }
 
 .errorCount {
