--- a/src/StartPage/styles.module.css
+++ b/src/StartPage/styles.module.css
@@ -6,50 +6,11 @@
     align-items: center;
 }
 
-.orContainer {
+.inner {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 20px 0;
-    position: relative;
-    height: 38px;
-}
 
-.circle {
-    position: absolute;
-    height: 25px;
-    width: 25px;
-    border: 1px solid #333333;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 12px;
-    color: #666666;
-}
-
-.line {
-    transform: rotate(90deg);
-    background: #333333;
-    height: 1px;
-    width: 14px;
-    position: absolute;
-}
-
-.line.top {
-    top: 0;
-}
-
-.line.bottom {
-    bottom: 0;
-}
-
-.startText {
-    color: #94C5FF;
-    text-align: center;
-    margin-bottom: 15px;
-}
-
-.startText:hover {
-    color: #007bff;
+    gap: 10px;
 }
