--- a/src/components/Sider/styles.module.css
+++ b/src/components/Sider/styles.module.css
@@ -3,33 +3,12 @@
     background: #2f3036;
     position: relative;
     height: 100%;
-    overflow: hidden;
 }
 
 .rules {
     display: flex;
     flex-direction: column;
     width: 250px;
-    overflow-y: hidden;
-    height: 100%;
-}
-
-.rules:hover {
-    overflow-y: overlay;
-}
-
-.rules::-webkit-scrollbar-thumb {
-    background-color: #333;
-}
-
-.rules::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: #666;
-}
-
-.rules::-webkit-scrollbar {
-    width: 6px;
-    background-color: #f5f5f5;
 }
 
 .ruleItemButton {
@@ -98,6 +77,10 @@
 }
 
 .noItemsLabel {
-    color: #a1a1a1;
-    margin: auto;
+    height: 100%;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
