--- a/src/components/Sider/styles.module.css
+++ b/src/components/Sider/styles.module.css
@@ -1,3 +1,9 @@
+.iconsContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 .ruleList {
     width: 250px;
     background: #2f3036;
@@ -24,10 +30,14 @@
     width: 250px;
 }
 
-.ruleItemButton .item {
-    display: flex;
-    align-items: center;
+/* .ruleItemButton  */
+.item {
     color: white;
+
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
 }
 
 .ruleItemButton:focus {
@@ -40,10 +50,6 @@
 
 }
 
-.markers .ruleItemButton .shapeWrapper {
-    min-width: 30px;
-    margin-right: 15px;
-}
 
 .markers .ruleItemButton i {
     font-size: 24px;
@@ -83,4 +89,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.busyRuleIndicator {
+    background-image: url('/img/rule-engine/busy.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width: 16px;
+    height: 16px;
 }
